# HEMCO

./: .gitignore  .gitmodules  .zenodo.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SUPPORT.md  replace_one_string_in_gc.py~
.ci-pipelines/: build-matrix.yml  quick-build.yml  release.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ask-a-question-about-hemco.md  bug-report.yml  config.yml  new-feature-or-discussion.md  new-feature.yml  question-discussion.yml  question-issue.md  report-a-bug-or-technical-issue.md  request-a-new-feature.md  start-a-hemco-discussion.md  version-release-checklist.md
.github/PULL_REQUEST_TEMPLATE/: create_a_hemco_pull_request.md  pull-request.md
.github/workflows/: mac.yml  ubuntu.yml  windows.yml
.release/: changeVersionNumbers.sh
CMakeScripts/: HEMCO-ConfigureGCClassic.cmake  HEMCO-ConfigureGCHPctm.cmake  HEMCO-ConfigureStandalone.cmake  HEMCO-DefaultCompilerOptions.cmake  HEMCO-Helpers.cmake
docs/: requirements.txt
docs/source/: bibtex.json  conf.py  hemco.bib  index.rst
docs/source/config/: basic-examples.rst  diagnostics.rst  editing-hemco-config.rst  extensions.rst  hemco-config-base.rst  hemco-config.rst  more-examples.rst
docs/source/coupling/: intro.rst
docs/source/getting-started/: hardware-requirements.rst  hardware-requirements.rst.~1~  key-references.rst  quick-start.rst  requirements.rst  software-requirements.rst
docs/source/hco-ref-guide/: basic-examples.rst  diagnostics.rst  extensions.rst  hco.bib  hemco-config.rst  hemco-config.rst.~1~  input-file-format.rst  intro.rst  known-bugs.rst  more-examples.rst  under-the-hood.rst  units.rst  version-history.rst
docs/source/hco-sa-guide/: compiling.rst  config-sim.rst  config-sim.rst.~1~  create-rundir.rst  download-code.rst  download-code.rst.~1~  download-data.rst  download-data.rst.~1~  hardware.rst  hco-sa-dry-run.rst  hco-sa-globus  hco-sa-globus.rst  intro.rst  login-env.rst  rundir-config.rst  software.rst
docs/source/reference/: hco.bib  version-history.rst
docs/source/tech-info/: input-file-format.rst  under-the-hood.rst
docs/source/user-guide/: compiling.rst  downloading.rst  rundir-config.rst  rundir-init.rst  running.rst
docs/source/user-guide-gc/: intro.rst
run/: HEMCO_Config.rc.025x03125.DustL23M  HEMCO_Config.rc.025x03125.GEOSFP.DustL23M  HEMCO_Config.rc.05x0625.DustL23M  HEMCO_Config.rc.05x0625.GEOSIT.DustL23M  HEMCO_Config.rc.05x0625.MERRA2.DustL23M  HEMCO_Config.rc.sample  HEMCO_Config.template  HEMCO_Diagn.rc.sample  HEMCO_sa_Config.DustL23M  HEMCO_sa_Config.template  HEMCO_sa_Grid.0125x015625.rc  HEMCO_sa_Grid.025x03125.rc  HEMCO_sa_Grid.05x0625.rc  HEMCO_sa_Grid.2x25.rc  HEMCO_sa_Grid.4x5.rc  HEMCO_sa_Spec.rc  HEMCO_sa_Time.rc  cleanRunDir.sh  createRunDir.sh  download_data.py  geos.4x5.grid  runHEMCO.sh
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  hco_arr_mod.F90  hco_calc_mod.F90  hco_chartools_mod.F90  hco_clock_mod.F90  hco_config_mod.F90  hco_datacont_mod.F90  hco_diagn_mod.F90  hco_driver_mod.F90  hco_emislist_mod.F90  hco_error_mod.F90  hco_extlist_mod.F90  hco_filedata_mod.F90  hco_fluxarr_mod.F90  hco_geotools_mod.F90  hco_interp_mod.F90  hco_logfile_mod.F90  hco_readlist_mod.F90  hco_restart_mod.F90  hco_scale_mod.F90  hco_state_mod.F90  hco_tidx_mod.F90  hco_timeshift_mod.F90  hco_types_mod.F90  hco_unit_mod.F90  hco_vertgrid_mod.F90  hcoio_dataread_mod.F90  hcoio_diagn_mod.F90  hcoio_messy_mod.F90  hcoio_read_esmf_mod.F90  hcoio_read_mapl_mod.F90  hcoio_read_std_mod.F90  hcoio_util_mod.F90  hcoio_write_esmf_mod.F90  hcoio_write_mapl_mod.F90  hcoio_write_std_mod.F90  interpreter.F90
src/Extensions/: CMakeLists.txt  drydep_toolbox_mod.F90  hcox_ch4wetland_mod.F90  hcox_custom_mod.F90  hcox_driver_mod.F90  hcox_dustdead_mod.F  hcox_dustginoux_mod.F90  hcox_dustl23m_mod.F90  hcox_finn_include.FINNv16  hcox_finn_include.H  hcox_finn_mod.F90  hcox_finn_mod.FINNv16  hcox_gc_POPs_mod.F90  hcox_gc_RnPbBe_mod.F90  hcox_gfed_include_gfed3.H  hcox_gfed_include_gfed4.H  hcox_gfed_mod.F90  hcox_iodine_mod.F90  hcox_lightnox_mod.F90  hcox_megan_mod.F90  hcox_metemis_mod.F90  hcox_paranox_mod.F90  hcox_seaflux_mod.F90  hcox_seasalt_mod.F90  hcox_soilnox_mod.F90  hcox_state_mod.F90  hcox_template_mod.F90x  hcox_tomas_dustdead_mod.F  hcox_tomas_jeagle_mod.F90  hcox_tools_mod.F90  hcox_vfei_mod.F90  hcox_volcano_mod.F90  ocean_toolbox_mod.F90
src/Interfaces/: CMakeLists.txt  hco_interface_common.F90  hcoi_standalone_mod.F90  hemco_standalone.F90
src/Interfaces/ESMF_MAPL/: CMakeLists.txt
src/Interfaces/GCHP/: CMakeLists.txt
src/Interfaces/GCHPctm/: CMakeLists.txt  HEMCO_GridCompMod.F90
src/Interfaces/GCHPctm/Registry/: CMakeLists.txt
src/Interfaces/GEOS/: CMakeLists.txt  HEMCO_GridComp.rc  HEMCO_GridCompMod.F90  HEMCOgmi_ExtData.yaml  HEMCOgocart_Config.rc  HEMCOgocart_ExtData.yaml
src/Interfaces/MAPL_ESMF/: CMakeLists.txt  hcoi_esmf_mod.F90
src/Interfaces/Shared/: hco_interface_common.F90
src/Interfaces/Standalone/: hcoi_standalone_mod.F90  hemco_standalone.F90
src/Shared/GeosUtil/: CMakeLists.txt  hco_henry_mod.F90  hco_julday_mod.F90  hco_regrid_a2a_mod.F90  regrid_a2a_mod.F90
src/Shared/Headers/: CMakeLists.txt  charpak_mod.F90  hco_charpak_mod.F90  hco_inquireMod.F90  hco_precision_mod.F90  inquireMod.F90
src/Shared/NcdfUtil/: CMakeLists.txt  TestNcdfUtil.F90  hco_m_netcdf_io_checks.F90  hco_m_netcdf_io_close.F90  hco_m_netcdf_io_create.F90  hco_m_netcdf_io_define.F90  hco_m_netcdf_io_get_dimlen.F90  hco_m_netcdf_io_handle_err.F90  hco_m_netcdf_io_open.F90  hco_m_netcdf_io_read.F90  hco_m_netcdf_io_readattr.F90  hco_m_netcdf_io_write.F90  hco_ncdf_mod.F90  julday_mod.F90  m_do_err_out.F90  m_netcdf_io_checks.F90  m_netcdf_io_close.F90  m_netcdf_io_create.F90  m_netcdf_io_open.F90  m_netcdf_io_read.F90  m_netcdf_io_readattr.F90  ncdf_mod.F90
